[tool.poetry]
name = "api"
version = "1.0.0"
description = ""
authors = ["JacobMonck <jacobamonck@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.78.0"
uvicorn = "^0.17.6"
taskipy = "^1.10.2"

[tool.poetry.dev-dependencies]

[tool.taskipy.tasks]
start = "uvicorn src.__main__:app --host 127.0.0.1 --port 8080"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
