[tool.poetry]
name = "api"
version = "1.0.0"
description = ""
authors = ["JacobMonck <jacobamonck@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.78.0"
uvicorn = "^0.17.6"
taskipy = "^1.10.2"
ormar = "^0.11.0"
asyncpg = "^0.25.0"
python-dotenv = "^0.20.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"

[tool.taskipy.tasks]
start = "uvicorn src.__main__:app --host 127.0.0.1 --port 8080"
lint = "black . && isort --profile black ."

[tool.black]
line-length = 120

[tool.pyright]
ignore = [
    "alembic",
    "src/impl/database/",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
